--- a/hugo.toml
+++ b/hugo.toml
@@ -24,6 +24,12 @@ min = "0.120.3"
   pageRef = "/blog"
   weight = 3
 
+[[menu.main]]
+  identifier = "RETROSPECTIVES"
+  name = "RETROSPECTIVES"
+  pageRef = "/retrospectives"
+  weight = 4
+
 # [[menu.main]]
 #   identifier = "DEV"
 #   name = "DEV"
