Fix post favicon and add opengraph image

--- a/hugo.toml
+++ b/hugo.toml
@@ -57,6 +57,10 @@ displayLogo = false
 favicon = "🫀"
 displayUpdatedDate = true
 
+[params.social]
+twitter = 'LucianKnock'
+
+
 [params.blog.list]
 displaytags = true
 
